gooddeed.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100%;
    width: 100%;
    background-color: White;
    overflow-x: none;    
}
a{
    text-decoration: none;
}

header{
    width: 100%;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px 20px;
    position: sticky;
    top: 0;     
    left: 0;
}
header img{
    width: 50px;
    height: 50px;
}
header nav {
    display: flex;
    align-items: center;
    gap: 50px;
}
header nav a{
    color: white;
    font-size: 20px;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
}
header nav a:hover{
    color: red;
}
header button{
    padding: 10px 20px;
    background-color: white;
    color: black;
    font-size: 15px;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
    border: none;
    border-radius: 50px;
    cursor: pointer;
}
/* MAIN SECTION */
main{
    width: 100%;
    height: 100%;
}
.hero_section{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    padding: 10px 40%;
    background-color: white;
}
.hero_title{
    width: 50%;
    height: 100%;
    padding: 0px 20px;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    gap: 40px;
}
.hero_title h1{
    font-family: 'Times New Roman', Times, serif;
    font-size: 50px;
    letter-spacing: -2px;
}
.hero_title p{
   font-family: 'Times New Roman', Times, serif;
    color: gray;
}
.hero_title button{
    padding: 10px 20px;
    background-color: black;
    color: white;
    font-size: 20px;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bold;
    border: none;
    border-radius: 50px;
    cursor: pointer;
}
.hero_image{
    width: 50%;
    height: 100%;   
}
  

